Fixed user avatars, added text wrapping, added chat styles.

--- a/src/App.scss
+++ b/src/App.scss
@@ -394,190 +394,200 @@ header {
 }
 
 // Chat styles
-.workSpace {
+.container {
   max-width: 1600px;
-  align-items: flex-start;
-  justify-content: space-between;
-  width: 100%;
-  display: flex;
-  flex-grow: 1;
-}
 
-.sidebar {
-  z-index: 99;
-  top: 0;
-  background-color: ghostwhite;
+  .workSpace {
+    display: flex;
+    justify-content: center;
+    width: 80vh;
+    background-color: #f2f2f2;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 50px;
 
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    .sidebar {
+      margin: 0;
+      width: 30%;
+      margin-right: 10px;
+
+      .search {
+        margin: 20px 0px 0px 20px;
+
+        .searchForm {
+          input {
+            border-radius: 10px;
+            width: 100%;
+            border: none;
+            height: 30px;
+            padding: 10px;
+            box-sizing: border-box;
+          }
+        }
+      }
+      .chats {
+        margin: 0px 0px 20px 20px;
+
+        .userChat {
+          display: flex;
+          justify-content: flex-start;
+          margin: 10px 0px;
+
+          img {
+            border: 1px solid darkgray;
+            width: 50px;
+            height: 50px;
+            border-radius: 50px;
+            margin: 0px;
+            padding: 3px;
+          }
+          .userChatInfo {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            margin: 0px;
+            justify-content: center;
+            margin-left: 8px;
+
+            span {
+              width: 100%;
+              font-weight: 500;
+              font-size: large;
+              margin: 0;
+              text-transform: capitalize;
+            }
+            p {
+              width: 100%;
+              color: darkgray;
+              margin: 0;
+              font-style: italic;
+            }
+          }
+        }
+      }
+    }
+
+    .chat {
+      width: 70%;
+      border-radius: 20px 40px 40px 20px;
+      background-color: white;
+      margin: 20px 20px 20px 0px;
+      padding: 10px;
+
+      .chatInfo {
+      }
+
+      .messages {
+        height: 500px;
+        overflow: scroll;
+        /* Скрываем scrollbar для IE, Edge и Firefox */
+        -ms-overflow-style: none; /* IE и Edge */
+        scrollbar-width: none; /* Firefox */
+
+        /* Скрываем scrollbar для Chrome, Safari и Opera */
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
+        .message {
+          display: flex;
+          gap: 20px;
+          margin-bottom: 20px;
+
+          .messageInfo {
+            display: flex;
+            flex-direction: column;
+            color: gray;
+            font-weight: 300;
+            margin: 0;
+
+            img {
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+          }
+          .messageContent {
+            max-width: 80%;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            margin: 0;
+            justify-content: flex-end;
+
+            p {
+              background-color: aliceblue;
+              padding: 10px 20px;
+              border-radius: 0px 10px 10px 10px;
+              max-width: max-content;
+              word-wrap: break-word;
+              margin: 0;
+            }
+
+            img {
+              margin: 0;
+            }
+          }
+          &.owner {
+            flex-direction: row-reverse;
+
+            .messageContent {
+              align-items: flex-end;
+              p {
+                background-color: #8da4f1;
+                color: white;
+                border-radius: 10px 0px 10px 10px;
+              }
+              img {
+              }
+            }
+          }
+        }
+      }
+
+      .input {
+        height: 50px;
+        background-color: white;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        input {
+          width: 100%;
+          border: none;
+          outline: none;
+          color: #2f2d52;
+          font-size: 18px;
+
+          &::placeholder {
+            color: lightgray;
+          }
+        }
+
+        .send {
+          display: flex;
+          align-items: stretch;
+          gap: 10px;
+
+          img {
+            border: 3px solid #8da4f1;
+            height: 24px;
+            cursor: pointer;
+            padding: 10px;
+            border-radius: 15px;
+          }
+
+          button {
+            border: none;
+            padding: 10px 15px;
+            color: white;
+            background-color: #8da4f1;
+            cursor: pointer;
+          }
+        }
+      }
+    }
   }
 }
-
-.SidebarItem {
-  position: relative;
-  display: flex;
-  margin: 0;
-  border-bottom: 0.5px solid gainsboro;
-  justify-content: flex-start;
-  text-decoration: none;
-  color: black;
-}
-.btnDelChat {
-  top: 0px;
-  right: 0px;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  border: none;
-  background: none;
-  color: gainsboro;
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
-}
-.chatImg {
-  margin: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border: none;
-  width: 40px;
-  height: 40px;
-  background-color: aquamarine;
-  border-radius: 20px;
-  margin-right: 10px;
-  box-sizing: border-box;
-  padding: 10px;
-  line-height: 1.2em;
-}
-.chatTitle {
-  margin: 10px 20px 10px 10px;
-}
-.formListAdd {
-  display: flex;
-}
-.chatListAddBtn {
-  background-color: gainsboro;
-  padding: 0;
-}
-.chatListAddInput {
-  margin: 10px 20px 10px 10px;
-  border: none;
-  background-color: inherit;
-  border-bottom: 1px solid gainsboro;
-}
-.chatListAddInput:focus-visible {
-  outline: none;
-}
-.sidebar ul li:hover {
-  background-color: aliceblue;
-  cursor: pointer;
-}
-.messageList {
-  min-height: 92.5vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-start;
-}
-.message {
-  max-width: 70vh;
-  text-align: center;
-  background-color: aliceblue;
-  border: 0.5px solid gainsboro;
-  border-radius: 20px 20px 20px 0px;
-  margin: 10px;
-}
-.message h3 {
-  text-align: left;
-  margin: 5px 10px;
-}
-.message .text {
-  word-break: break-all;
-  text-align: justify;
-  margin: 10px 10px;
-}
-.timeStamp {
-  color: gainsboro;
-  text-align: right;
-  margin: 5px 5px;
-}
-.formSubmit {
-  position: sticky;
-  bottom: 50px;
-  width: 150%;
-  background-color: gainsboro;
-  display: flex;
-  flex-shrink: 1;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-  align-content: center;
-}
-.inputField input {
-  height: 20px;
-  border: none;
-}
-.inputField input:focus-visible {
-  outline: none;
-}
-.inputField .inputName {
-  min-width: 50px;
-  border-radius: 20px 0px 0px 20px;
-  padding: 5px 5px 5px 15px;
-  margin: 10px 0px 10px 15px;
-  border-right: 0.5px solid gainsboro;
-}
-.inputField .inputText {
-  width: 300px;
-  border-radius: 20px 20px 20px 20px;
-  padding: 5px 15px 5px 15px;
-  margin: 10px 10px 10px 0px;
-}
-.sendMessageBtn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 0;
-  font-size: 32px;
-  border: none;
-  width: 40px;
-  height: 40px;
-  border-radius: 40px;
-  color: white;
-  background-color: dodgerblue;
-}
-.profile {
-  background-color: aquamarine;
-  display: flex;
-  justify-content: center;
-}
-.profileImg {
-  width: 70px;
-  height: 70px;
-  border-radius: 70px;
-  background-color: red;
-}
-.settings {
-  display: flex;
-}
-.quoteBlock {
-  margin: 0 auto;
-  max-width: 400px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
-}
-.quote {
-  text-align: justify;
-  padding: 15px;
-}
-
-// Chats styles
-
